2001-05-14  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc_smpp.c: Made system-id variable obsolete (i.e., if used,
	the user is warned and told to use smsc-username instead). Things
	should still work, and this allows us to remove the variable in a
	future version.
	
	* */*.conf: Renamed system-id to smsc-username in sample config
	files.

2001-05-14  Lars Wirzenius  <liw@iki.fi>

	* test/fakewap.c: Applied (after two months of waiting!) Neil
	Hunter's patch for making fakewap more suitable for benchmarking
	WAP gateways.

2001-05-14  Lars Wirzenius  <liw@iki.fi>

	* benchmarks/bench_sms.conf: Add smsc-username, which is now
	used instead of system-id.
	
	* checks/check_list.c: #undef strcmp so that stupid glibc bug
	won't cause half a dozen of warnings for a single call.

2001-05-14  Derry Hamilton <rasilon@tardis.ed.ac.uk>

	* gw/smsbox.c: Wrapped the ssl_certkey_file declaration in 
	ifdefs, like the code that uses it so that we don't have gcc
	complaining about unused variables.

2001-05-14  Nick Clarey  <nclarey@3glab.com>

	* gw/smsc_at.c: 7-bit messages plus UDH now encoded correctly. 
	Thanks to Paul Keogh for the patch, as well as Richard Braakman for
	supervising the change to the UDL calculation code.

2001-05-11  Uoti Urpala  <uau@wapit.com>

	* gw/urltrans.c: accept-x-kannel-headers and assume-plain-text
	were set incorrectly.

2001-05-09  Uoti Urpala  <uau@wapit.com>

	* gw/smsc_emi2.c: Fixed formatting of a message field (%04d vs
	%4d). Spotted by Andreas Fink.

	* gw/smsbox.c: Fixed a nasty typo in the previous change.

2001-05-09  Uoti Urpala  <uau@wapit.com>

	* gw/smsbox.c: Return meaningful HTTP status codes when replying
	to requests to sendsms-port.

2001-05-08  Uoti Urpala  <uau@wapit.com>

	* gwlib/conn.c: Added missing unlock_out(conn) to conn_flush().
	Found by Michael Mulcahy. Since conn_flush() is currently unused
	this didn't cause any Kannel bugs.

2001-05-07  Jarkko Kovala <jarkko.kovala@iki.fi>
 