@@ -18,7 +18,6 @@ smsc-id = smpp
 host = 127.0.0.1
 port = 2345
 receive-port = 2345
-system-id = xyzzy
 smsc-username = xyzzy
 smsc-password = xyzzy
 system-type = "VMA"
